# spotify-api-examples

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yaml
examples/: basic_usage.py
src/: __init__.py  auth_server.py  base_client.py  config.py  models.py  playlists.py  spotify.py  spotify_client.py  tracks.py
tests/: test_config.py  test_core.py  test_models.py  test_playlists.py  test_tracks.py  test_utils.py
